# cutefish-settings

./: .gitignore  CMakeLists.txt
src/: application.cpp  background.cpp  display.cpp  display.h  main.cpp  resources.qrc
src/cursor/: cursortheme.cpp  cursorthememodel.cpp
src/fonts/: kxftconfig.cpp
src/qml/: BluetoothPage.qml  Hideable.qml  HorizontalDivider.qml  IconButton.qml  IconCheckBox.qml  ItemPage.qml  LanguagePage.qml  RoundedItem.qml  Scrollable.qml  SideBar.qml  StandardButton.qml  StandardItem.qml  Theme.qml  main.qml
src/qml/About/: Main.qml
src/qml/Appearance/: Main.qml
src/qml/Application/: Main.qml
src/qml/Battery/: BatteryItem.qml  HistoryGraph.qml  Main.qml
src/qml/Bluetooth/: Main.qml  PairDialog.qml
src/qml/Cursor/: Main.qml
src/qml/DateTime/: Main.qml  TimeZoneDialog.qml
src/qml/DefaultApp/: AppComboBox.qml  Main.qml
src/qml/Display/: Main.qml  RotationButton.qml
src/qml/Dock/: Main.qml
src/qml/Fonts/: Main.qml
src/qml/Hotspot/: Main.qml
src/qml/Notification/: Main.qml
src/qml/Power/: Main.qml
src/qml/Proxy/: Main.qml
src/qml/Sound/: Main.qml
src/qml/Touchpad/: Main.qml
src/qml/Update/: Main.qml
src/qml/User/: Main.qml  UserDelegateItem.qml
src/qml/VPN/: Main.qml
src/qml/WLAN/: ConnectDialog.qml  Main.qml  NewNetworkDialog.qml  WifiItem.qml  WifiView.qml  WirelessDetailsDialog.qml
src/qml/Wallpaper/: DesktopPreview.qml  Main.qml
src/qml/Wired/: Main.qml  WiredItem.qml
